// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MaestroTranslators Other Actions Snapshots > hideKeyboard 1`] = `
"- hideKeyboard
"
`;

exports[`MaestroTranslators Other Actions Snapshots > repeat command 1`] = `
"- repeat:
    times: 3
    commands:
        - tapOn:
            id: "nestedId"
        "
`;

exports[`MaestroTranslators Other Actions Snapshots > repeatWhileNotVisible command 1`] = `
"- repeat:
    while:
        notVisible:
            id: "invisibleId"
    commands:
        - tapOn:
            id: "nestedId"
        "
`;

exports[`MaestroTranslators Other Actions Snapshots > repeatWhileVisible command 1`] = `
"- repeat:
    while:
        visible:
            id: "visibleId"
    commands:
        - tapOn:
            id: "nestedId"
        "
`;

exports[`MaestroTranslators Other Actions Snapshots > screenshot 1`] = `
"- takeScreenshot: myScreenshot
"
`;

exports[`MaestroTranslators Other Actions Snapshots > waitForAnimationEnd with timeout 1`] = `
"- waitForAnimationToEnd:
    timeout: 2000
"
`;

exports[`MaestroTranslators Other Actions Snapshots > waitForAnimationEnd without timeout 1`] = `
"- waitForAnimationToEnd:
    timeout: 5000
"
`;
